# catkapinda-crm

./: .gitignore  DEPLOY_RENDER.md  Makefile  README.md  analytics_builders.py  app.py  auth_engine.py  backup_sections.py  bootstrap_engine.py  catkapinda_crm.db  dashboard_sections.py  db_engine.py  entity_builders.py  equipment_rules.py  finance_engine.py  form_rules.py  personnel_rules.py  personnel_sections.py  render.yaml  render_start.sh  report_sections.py  reporting_rules.py  requirements.txt  secrets.template.toml  start_crm.command
v2/backend/: .env.example  pyproject.toml
v2/backend/app/: __init__.py  main.py
v2/backend/app/api/: router.py
v2/backend/app/core/: audit.py  auth_sync.py  bootstrap.py  config.py  database.py  local_doctor.py  security.py  sms.py
v2/backend/app/repositories/: __init__.py  attendance.py  audit.py  auth.py  deductions.py  equipment.py  personnel.py  purchases.py  restaurants.py  sales.py
v2/backend/app/schemas/: __init__.py  audit.py  (+14 more)
v2/backend/tests/: test_attendance_service.py  test_audit_routes.py  test_auth_routes.py  test_auth_service.py  test_auth_sync.py  test_backups_routes.py  test_bootstrap.py  test_database.py  test_database_preflight.py  test_deductions_service.py  test_go_live_decision_report.py  test_health_routes.py  test_local_doctor.py  test_module_routes.py  test_mutation_routes.py  test_overview_service.py  test_payroll_routes.py  test_payroll_service.py  test_personnel_service.py  test_pilot_helpers.py  test_render_env_bundle.py  test_reports_service.py  test_repository_schema_compat.py  test_security.py
(+195 files in other folders)
