[project]
name = "catkapinda-crm-v2-backend"
version = "0.1.0"
description = "FastAPI backend for Cat Kapinda CRM v2"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
